--- a/BK_Details_App/Views/FavouritesView.axaml
+++ b/BK_Details_App/Views/FavouritesView.axaml
@@ -1,8 +1,10 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:vm="using:BK_Details_App.ViewModels"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="BK_Details_App.FavouriteGroups">
-  Welcome to Avalonia!
+             x:Class="BK_Details_App.FavouritesView"
+			 x:DataType="vm:FavouritesVM">
+  
 </UserControl>
