--- a/BK_Details_App/Views/DetailsView.axaml
+++ b/BK_Details_App/Views/DetailsView.axaml
@@ -6,40 +6,55 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="BK_Details_App.DetailsView"
 			 x:DataType="vm:DetailsVM">
-	<Grid RowDefinitions="7*, Auto, 78*">
+	<Grid RowDefinitions="8*, Auto, 78*">
 		<!--<Border Grid.Row="0" BorderThickness="3" BorderBrush="LightSteelBlue"></Border>
 		<Border Grid.Row="1" BorderThickness="3" BorderBrush="LawnGreen"></Border>
 		<Border Grid.Row="2" BorderThickness="3" BorderBrush="Red"></Border>-->
 
 		<!--Верхняя панель с лого и кнопками-->
-		<Grid Grid.Row="0" ColumnDefinitions="5*, 68*, Auto, 20*">
+		<Grid Grid.Row="0" ColumnDefinitions="5*, 68*, Auto">
 			<Image Grid.Column="0" HorizontalAlignment="Left" Margin="10" Source="/Assets/logobk.png"></Image>
 			<!--<Border Grid.Column="1" BorderThickness="3" BorderBrush="LawnGreen"></Border>-->
-			<TextBlock Classes="HeadPage" Grid.Column="1">Просмотр материалов</TextBlock>
-			<Button Classes="ChooseUploadFile" Grid.Column="2" Command="{Binding OpenFileAsync}" Margin="0 10 20 10" HorizontalAlignment="Right">Выбрать файл для сравнения</Button>
-			<Button Classes="ChooseUploadFile" Grid.Column="3" Margin="0 10 20 10" HorizontalAlignment="Right">Выгрузить результат в Excel</Button>
+			<TextBlock Grid.Column="1" Classes="HeadPage" >Просмотр материалов</TextBlock>
+			<StackPanel Orientation="Horizontal" Grid.Column="2">
+				<Button Classes="ChooseUploadFile" Width="230" Command="{Binding OpenFileAsync}" Margin="0 10 20 10" HorizontalAlignment="Right">Выбрать файл для сравнения</Button>
+				<Button Classes="ChooseUploadFile" Width="220" Margin="0 10 20 10" HorizontalAlignment="Right">Выгрузить результат в Excel</Button>
+			</StackPanel>
 		</Grid>
 
 		<!--Поиск, сортировка и фильтрация-->
 		<Grid Grid.Row="1" ColumnDefinitions="50*, 50*">
 			<!--Левая часть-->
-			<Grid Grid.Column="0" ColumnDefinitions="3*, Auto" RowDefinitions="*,*">
+			<Grid Grid.Column="0" ColumnDefinitions="3*, Auto" RowDefinitions="*,*,*">
 				<TextBox Classes="Search" Grid.Column="0" Grid.RowSpan="2" Height="90"
 						 HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
 						 TextWrapping="Wrap" Text="{Binding SearchPEZs}"></TextBox>
-				<ComboBox Classes="Choice" Grid.Column="1" Grid.Row="0" Margin="10" PlaceholderText="Сортировка">
+				<ComboBox Classes="Choice" Grid.Column="1" Grid.Row="0" Margin="10" PlaceholderText="Сортировка" SelectedIndex="{Binding IsAscendingPEZs}">
 					<ComboBox.Items>От А до Я</ComboBox.Items>
 					<ComboBox.Items>От Я до А</ComboBox.Items>
 				</ComboBox>
-				<ComboBox Classes="Choice" Grid.Column="1" Grid.Row="1" Margin="10" PlaceholderText="Фильтрация">
+				<ComboBox Classes="Choice" Grid.Column="1" Grid.Row="1" Margin="10" PlaceholderText="Фильтрация" SelectedIndex="{Binding SelectedFilter}">
+					<ComboBox.Items>Без фильтрации</ComboBox.Items>
 					<ComboBox.Items>От 1 до 10</ComboBox.Items>
 					<ComboBox.Items>От 11 до 20</ComboBox.Items>
 					<ComboBox.Items>От 21 и более</ComboBox.Items>
 				</ComboBox>
+
+				<StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
+					<TextBlock  Classes="CountItems" Text="{Binding NameFile ,StringFormat='{}{0}: '}"></TextBlock>
+					<TextBlock Grid.Row="2" Grid.Column="0" Classes="CountItems">
+						<TextBlock.Text>
+							<MultiBinding StringFormat="{}{0} из {1}">
+								<Binding Path="CountItemsPEZs"/>
+								<Binding Path="CountItemsFilePEZ"/>
+							</MultiBinding>
+						</TextBlock.Text>
+					</TextBlock>
+				</StackPanel>
 			</Grid>
 
 			<!--Правая часть-->
-			<Grid Grid.Column="1" ColumnDefinitions="3*, Auto" RowDefinitions="*,*">
+			<Grid Grid.Column="1" ColumnDefinitions="3*, Auto" RowDefinitions="*,*,*">
 				<TextBox Classes="Search" Grid.Column="0" Grid.RowSpan="2" Height="90"
 						 HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
 						 TextWrapping="Wrap" Text="{Binding SearchMaterials}"></TextBox>
@@ -54,6 +69,17 @@
 						</DataTemplate>
 					</ComboBox.ItemTemplate>
 				</ComboBox>
+				<StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
+					<TextBlock  Classes="CountItems" Text="Общий список материалов:"></TextBlock>
+					<TextBlock Grid.Row="2" Grid.Column="0" Classes="CountItems">
+						<TextBlock.Text>
+							<MultiBinding StringFormat="{}{0} из {1}">
+								<Binding Path="CountItemsMaterials"/>
+								<Binding Path="CountItemsFileMaterials"/>
+							</MultiBinding>
+						</TextBlock.Text>
+					</TextBlock>
+				</StackPanel>
 			</Grid>
 		</Grid>
 
@@ -61,116 +87,123 @@
 		<Grid Grid.Row="2" ColumnDefinitions="50*, 50*">
 			<!--Левая часть-->
 			<Border Grid.Column="0" Classes="ListLeft">
-			<Grid Grid.Column="0" RowDefinitions="94*, 6*" >
-				<Border Grid.Row="1" Background="#003399"></Border>
-				<ListBox Grid.Row="0" Background="Transparent" ItemsSource="{Binding ListPEZs}">
-					<ListBox.ItemsPanel>
-						<ItemsPanelTemplate>
-							<UniformGrid Columns="2"/>
-						</ItemsPanelTemplate>
-					</ListBox.ItemsPanel>
-					<ListBox.ItemTemplate>
-						<DataTemplate>
-							<Border Classes="ItemsLeft">
-								<Grid ColumnDefinitions="80*, 20*" Height="190">
-									<!--информация-->
-									<Grid Grid.Column="0" RowDefinitions="Auto, *, Auto, *, Auto" Margin="10">
-
-										<StackPanel Grid.Row="0">
-											<TextBlock Classes="Name"  Text="Наименование:" Margin="0 0 0 10"></TextBlock>
-										</StackPanel>
-										<ScrollViewer Grid.Row="1" Height="50" Margin="0 0 15 10" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-											    <TextBlock Classes="Name" FontWeight="Bold" Text="{Binding Name}" TextWrapping="Wrap"/>
-											</ScrollViewer>
-										<StackPanel Grid.Row="2">
-											<TextBlock Classes="Name" Text="Метка/и:" Margin="0 5 0 0"></TextBlock>
-										</StackPanel>
-										<StackPanel Grid.Row="3">
-											<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
-												<TextBlock Classes="Name" Text="{Binding Mark}" TextWrapping="NoWrap" Margin="0 5 0 15"></TextBlock>
-											</ScrollViewer>
-										</StackPanel>
-										<StackPanel Grid.Row="4">
-											<TextBlock Text="{Binding Quantity, StringFormat='Количество: {0}'}" Margin="0 5 0 0"></TextBlock>
-										</StackPanel>
-									</Grid>
-
-									<!--кнопки редактирования и удаления-->
-									<Grid Grid.Column="1" RowDefinitions="50*, 50*">
-										<StackPanel Grid.Row="0">
-											<Image VerticalAlignment="Center" Margin="5" Source="avares://BK_Details_App/Assets/edit.png" Width="44"></Image>
-											<Image VerticalAlignment="Center" Margin="5" Source="avares://BK_Details_App/Assets/del.png" Width="44"></Image>
-										</StackPanel>
-									</Grid>
-								</Grid>
-							</Border>
-						</DataTemplate>
-					</ListBox.ItemTemplate>
-				</ListBox>
-				<Button Classes="ChooseUploadFile" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1">Добавить ПЭЗ</Button>
-			</Grid>
-			</Border>
-			
-			<!--Правая часть-->
-			<Border Grid.Column="1" Classes="ListRight">
-			<Grid Grid.Column="1" RowDefinitions="Auto, 93*">
-				<Grid Grid.Row="0" ColumnDefinitions="86*, 7*, 7*">
-					<ComboBox Classes="ChoiceGroup" Grid.Column="0" HorizontalAlignment="Stretch" ItemsSource="{Binding GroupsList}" SelectedItem="{Binding SelectedGroup}">
-						<ComboBox.ItemTemplate>
+				<Grid Grid.Column="0" RowDefinitions="94*, 6*" >
+					<Border Grid.Row="1" Background="#003399"></Border>
+					<ListBox Grid.Row="0" Background="Transparent" ItemsSource="{Binding CollectionPEZs}">
+						<ListBox.ItemsPanel>
+							<ItemsPanelTemplate>
+								<UniformGrid Columns="2"/>
+							</ItemsPanelTemplate>
+						</ListBox.ItemsPanel>
+						<ListBox.ItemTemplate>
 							<DataTemplate>
-								<TextBlock Text="{Binding Name}"></TextBlock>
-							</DataTemplate>
-						</ComboBox.ItemTemplate>
-					</ComboBox>
-					<Button Background="Transparent" Grid.Column="1" CommandParameter="{Binding SelectedGroup.Name}">
-						 <!--Command="{Binding AddToFavorite}"-->
-						<Image Classes="FavoritesButton" Source="avares://BK_Details_App/Assets/heart-add.png"></Image>
-					</Button>
-					<Button Background="Transparent" Grid.Column="2" Command="{Binding ToFavouritesView}">
-						<Image Classes="FavoritesButton" Source="avares://BK_Details_App/Assets/heart-search.png"></Image>
-					</Button>
-					
-				</Grid>
-				
-				<ListBox Grid.Row="1" Background="Transparent" ItemsSource="{Binding FilteredMaterials}">
-					<ListBox.ItemsPanel>
-						<ItemsPanelTemplate>
-							<UniformGrid Columns="2"/>
-						</ItemsPanelTemplate>
-					</ListBox.ItemsPanel>
-					<ListBox.ItemTemplate>
-						<DataTemplate>
-							<StackPanel Background="Transparent">
-								<StackPanel.ContextMenu>
-									<ContextMenu>
-										<MenuItem Header="Добавить в избранное" Command="{Binding $parent[UserControl].((vm:DetailsVM)DataContext).AddToFavorite}" CommandParameter="{Binding Name}"></MenuItem>
-										<MenuItem Header="Редактировать" Command="{Binding $parent[UserControl].((vm:DetailsVM)DataContext).AddToFavorite}" CommandParameter="{Binding Name}"></MenuItem>
-										<MenuItem Header="Удалить" Command="{Binding $parent[UserControl].((vm:DetailsVM)DataContext).AddToFavorite}" CommandParameter="{Binding Name}"></MenuItem>
-									</ContextMenu>
-								</StackPanel.ContextMenu>
-								<Border Classes="ItemsLeft">
-									<Grid ColumnDefinitions="90*, 10*" Height="180" Margin="10">
+								<Border Classes="ItemsLeft" Height="190">
+									<Grid ColumnDefinitions="80*, 20*" Height="190">
 										<!--информация-->
-										<Grid Grid.Column="0" RowDefinitions="30*, 25*, 25*, 25*">
+										<Grid Grid.Column="0" RowDefinitions="Auto, *, Auto, *, Auto" Margin="10">
 
-											<TextBlock Grid.Row="0" FontWeight="Bold" Margin="0 0 5 0" Text="{Binding Name, StringFormat='Наименование: {0}'}" TextWrapping="Wrap"></TextBlock>
-											<TextBlock Grid.Row="1" Margin="0 0 5 0" Text="{Binding Analogs, StringFormat='Аналоги: {0}'}"></TextBlock>
-											<TextBlock Grid.Row="2" Margin="0 0 5 0" Text="{Binding CategoryNavigation.Name}"></TextBlock>
-											<TextBlock Grid.Row="3" Text="{Binding Note, StringFormat='Примечание: {0}'}" TextWrapping="Wrap"></TextBlock>
+											<StackPanel Grid.Row="0">
+												<TextBlock Classes="Name"  Text="Наименование:" Margin="0 0 0 10"></TextBlock>
+											</StackPanel>
+											<ScrollViewer Grid.Row="1" Height="50" Margin="0 0 15 10" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible">
+												<TextBlock Classes="Name" FontWeight="Bold" Text="{Binding Name}" TextWrapping="Wrap"/>
+											</ScrollViewer>
+											<StackPanel Grid.Row="2">
+												<TextBlock Classes="Name" Text="Метка/и:" Margin="0 5 0 0"></TextBlock>
+											</StackPanel>
+											<StackPanel Grid.Row="3">
+												<ScrollViewer PointerWheelChanged="OnPointerWheelChanged"
+													HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled">
+													<TextBlock Classes="Name" Text="{Binding Mark}" TextWrapping="NoWrap" Margin="0 5 0 15"></TextBlock>
+												</ScrollViewer>
+											</StackPanel>
+											<StackPanel Grid.Row="4">
+												<TextBlock Text="{Binding Quantity, StringFormat='Количество: {0}'}" Margin="0 5 0 0"></TextBlock>
+											</StackPanel>
 										</Grid>
 
-										<!--единицы измерения-->
+										<!--кнопки редактирования и удаления-->
 										<Grid Grid.Column="1" RowDefinitions="50*, 50*">
-											<TextBlock TextWrapping="Wrap" Grid.Row="0" Text="{Binding Measurement}"
-													   HorizontalAlignment="Center" TextAlignment="Center" Margin="5 0 0 0"></TextBlock>
+											<StackPanel Grid.Row="0">
+												<Button Background="Transparent" Grid.Column="1">
+													<Image VerticalAlignment="Center" Margin="5" Source="avares://BK_Details_App/Assets/edit.png" Width="44"></Image>
+												</Button>
+												<Button Background="Transparent" Grid.Column="1">
+													<Image VerticalAlignment="Center" Margin="5" Source="avares://BK_Details_App/Assets/del.png" Width="44"></Image>
+												</Button>
+											</StackPanel>
 										</Grid>
 									</Grid>
 								</Border>
-							</StackPanel>
-						</DataTemplate>
-					</ListBox.ItemTemplate>
-				</ListBox>
-			</Grid>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+					<Button Classes="ChooseUploadFile" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1">Добавить ПЭЗ</Button>
+				</Grid>
+			</Border>
+
+			<!--Правая часть-->
+			<Border Grid.Column="1" Classes="ListRight">
+				<Grid Grid.Column="1" RowDefinitions="Auto, 93*">
+					<Grid Grid.Row="0" ColumnDefinitions="86*, 7*">
+						<ComboBox Classes="ChoiceGroup" Grid.Column="0" HorizontalAlignment="Stretch" ItemsSource="{Binding GroupsList}" SelectedItem="{Binding SelectedGroup}">
+							<ComboBox.ItemTemplate>
+								<DataTemplate>
+									<TextBlock Text="{Binding Name}"></TextBlock>
+								</DataTemplate>
+							</ComboBox.ItemTemplate>
+						</ComboBox>
+						<Button Background="Transparent" Grid.Column="1">
+							<Image Classes="FavoritesButton" Source="avares://BK_Details_App/Assets/heart-search.png"></Image>
+						</Button>
+					</Grid>
+
+					<ListBox Grid.Row="1" Background="Transparent" ItemsSource="{Binding FilteredMaterials}">
+						<ListBox.ItemsPanel>
+							<ItemsPanelTemplate>
+								<UniformGrid Columns="2"/>
+							</ItemsPanelTemplate>
+						</ListBox.ItemsPanel>
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<StackPanel Background="Transparent">
+									<StackPanel.ContextMenu>
+										<ContextMenu>
+											<MenuItem Header="Добавить в избранное" Command="{Binding $parent[UserControl].((vm:DetailsVM)DataContext).AddToFavorite}" CommandParameter="{Binding Name}"></MenuItem>
+											<MenuItem Header="Редактировать" Command="{Binding $parent[UserControl].((vm:DetailsVM)DataContext).AddToFavorite}" CommandParameter="{Binding Name}"></MenuItem>
+											<MenuItem Header="Удалить" Command="{Binding $parent[UserControl].((vm:DetailsVM)DataContext).AddToFavorite}" CommandParameter="{Binding Name}"></MenuItem>
+										</ContextMenu>
+									</StackPanel.ContextMenu>
+									<Border Classes="ItemsLeft">
+										<Grid ColumnDefinitions="90*, 10*" Height="160" Margin="10">
+											<!--информация-->
+											<Grid Grid.Column="0" RowDefinitions="30*, 25*, 25*, 25*, 25*">
+
+												<TextBlock Grid.Row="0" FontWeight="Bold" Margin="0 0 5 0" Text="{Binding Name, StringFormat='Наименование: {0}'}" TextWrapping="Wrap"></TextBlock>
+												<TextBlock Grid.Row="1" Margin="0 0 5 0" Text="Аналоги:"></TextBlock>
+												<ScrollViewer PointerWheelChanged="OnPointerWheelChanged"
+													Grid.Row="2" Height="50" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled">
+													<TextBlock Margin="0 5 0 5" Text="{Binding Analogs}"></TextBlock>	
+												</ScrollViewer>
+												<ScrollViewer PointerWheelChanged="OnPointerWheelChanged"
+													Grid.Row="3" Margin="0 15 0 0" Height="50" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled">
+													<TextBlock Margin="0 10 0 10" Text="{Binding CategoryNavigation.Name}"></TextBlock>	
+												</ScrollViewer>
+												<TextBlock Grid.Row="4" Margin="0 10 0 0" Text="{Binding Note, StringFormat='Примечание: {0}'}" TextWrapping="Wrap"></TextBlock>
+											</Grid>
+
+											<!--единицы измерения-->
+											<Grid Grid.Column="1" RowDefinitions="50*, 50*">
+												<TextBlock TextWrapping="Wrap" Grid.Row="0" Text="{Binding Measurement}"
+														   HorizontalAlignment="Center" TextAlignment="Center" Margin="5 0 0 0"></TextBlock>
+											</Grid>
+										</Grid>
+									</Border>
+								</StackPanel>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+				</Grid>
 			</Border>
 		</Grid>
 	</Grid>
