--- a/BK_Details_App/Views/DetailsView.axaml
+++ b/BK_Details_App/Views/DetailsView.axaml
@@ -153,7 +153,7 @@
 								</DataTemplate>
 							</ComboBox.ItemTemplate>
 						</ComboBox>
-						<Button Background="Transparent" Grid.Column="1">
+						<Button Background="Transparent" Grid.Column="1" Command="{Binding ToFavouritesView}">
 							<Image Classes="FavoritesButton" Source="avares://BK_Details_App/Assets/heart-search.png"></Image>
 						</Button>
 					</Grid>
