--- a/BK_Details_App/Styles.axaml
+++ b/BK_Details_App/Styles.axaml
@@ -69,6 +69,16 @@
 		<Setter Property="Margin" Value="10 0 0 10"></Setter>
 	</Style>
 
+	<Style Selector="TextBlock.Name">
+		<Setter Property="FontSize" Value="15"></Setter>
+		<Setter Property="TextWrapping" Value="Wrap"></Setter>
+	</Style>
+
+	<Style Selector="TextBlock.HeadTextBox">
+		<Setter Property="FontSize" Value="20"></Setter>
+		<Setter Property="Margin" Value="5"></Setter>
+	</Style>
+
 	<Style Selector="TextBox.Search">
 		<Setter Property="BorderBrush" Value="#003399"></Setter>
 		<Setter Property="BorderThickness" Value="3"></Setter>
@@ -77,10 +87,15 @@
 		<Setter Property="Margin" Value="10"></Setter>
 		<Setter Property="Watermark" Value="Поиск..."></Setter>
 	</Style>
-
-	<Style Selector="TextBlock.Name">
+	
+	<Style Selector="TextBox.AddEditPEZ">
+		<Setter Property="BorderBrush" Value="#003399"></Setter>
+		<Setter Property="BorderThickness" Value="3"></Setter>
 		<Setter Property="FontSize" Value="15"></Setter>
-		<Setter Property="TextWrapping" Value="Wrap"></Setter>
+		<Setter Property="Height" Value="30"></Setter>
+		<Setter Property="Width" Value="400"></Setter>
+		<Setter Property="Margin" Value="5"></Setter>
+		<Setter Property="HorizontalAlignment" Value="Center"></Setter>
 	</Style>
 
 	<Style Selector="ComboBox.Choice">
