--- a/BK_Details_App/Views/AddEditPEZView.axaml
+++ b/BK_Details_App/Views/AddEditPEZView.axaml
@@ -18,5 +18,16 @@
 				<Button Classes="ChooseUploadFile" Width="220" Margin="0 10 20 10" HorizontalAlignment="Right" Content="{Binding ButtonName}"></Button>
 			</StackPanel>
 		</Grid>
+
+		<Grid Grid.Row="2">
+			<StackPanel HorizontalAlignment="Center">
+				<TextBlock Classes="HeadTextBox" Text="Введите наименование:"></TextBlock>
+				<TextBox Classes="AddEditPEZ" Grid.Column="0" Text="{Binding }"></TextBox>
+				<TextBlock Classes="HeadTextBox" Text="Введите метку/и (через запятую):"></TextBlock>
+				<TextBox Classes="AddEditPEZ" Grid.Column="0" Text="{Binding }"></TextBox>
+				<TextBlock Classes="HeadTextBox" Text="Введите количество:"></TextBlock>
+				<TextBox Classes="AddEditPEZ" Grid.Column="0" Text="{Binding }"></TextBox>
+			</StackPanel>			
+		</Grid>
 	</Grid>
 </UserControl>
