--- a/BK_Details_App/Views/AddEditPEZView.axaml
+++ b/BK_Details_App/Views/AddEditPEZView.axaml
@@ -15,7 +15,7 @@
 			<TextBlock Grid.Column="1" Classes="HeadPage" Text="{Binding HeadPage}"></TextBlock>
 			<StackPanel Orientation="Horizontal" Grid.Column="2">
 				<Button Classes="ChooseUploadFile" Width="230" Command="{Binding ToBackCommand}" Margin="0 10 20 10" HorizontalAlignment="Right" Content="Назад"></Button>
-				<Button Classes="ChooseUploadFile" Width="220" Margin="0 10 20 10" HorizontalAlignment="Right" Content="{Binding ButtonName}"></Button>
+				<Button Classes="ChooseUploadFile" Width="220" Command="{Binding AddEditPEZ}" Margin="0 10 20 10" HorizontalAlignment="Right" Content="{Binding ButtonName}"></Button>
 			</StackPanel>
 		</Grid>
 
